src/objects/CIS_Contact__c.object
<CustomObject>
    <description>This object is for CIS names for their Members of Congress - Senators and Congessmen, as well as office staff.</description>
    <fields>
        <fullName>CIS_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CIS Office</label>
        <referenceTo>CIS_Offices__c</referenceTo>
        <relationshipLabel>CIS Contacts</relationshipLabel>
        <relationshipName>CIS_Office_Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Recordtype__c</fullName>
        <label>Hidden_Recordtype</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Region__c</fullName>
        <label>Hidden_Region</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member of Congress</fullName>
                </value>
                <value>
                    <fullName>Office Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CIS Contact</label>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>CIS_Office__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Office Staff,Member of Congress</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Contacts_2</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Hidden_Recordtype__c</columns>
        <columns>Hidden_Region__c</columns>
        <columns>Type__c</columns>
        <columns>CIS_Office__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Office Staff,Member of Congress</value>
        </filters>
        <label>All Contacts 2</label>
    </listViews>
    <listViews>
        <fullName>Office_Staff</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>CIS_Office__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Office Staff</value>
        </filters>
        <label>Office Staff</label>
    </listViews>
    <nameField>
        <label>CIS Contact Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIS Contacts</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>MOC_must_not_belong_to_an_office</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( NOT( ISBLANK( CIS_Office__r.Id )),  ISPICKVAL(Type__c, &quot;Member of Congress&quot;))</errorConditionFormula>
        <errorMessage>Member of Congress Type must not have an office entry on this record.  Please change the type, or remove the office reference.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Office_staff_must_belong_to_an_office</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISBLANK( CIS_Office__r.Id ),  ISPICKVAL(Type__c, &quot;Office Staff&quot;))</errorConditionFormula>
        <errorMessage>Office staff must belong to an office.  Please choose an office for this Office Staff.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_must_be_10_digits</fullName>
        <active>true</active>
        <errorConditionFormula>AND (  Phone_Number__c &lt;&gt; &quot;&quot;, 

LEN( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( Phone_Number__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;)) &lt;&gt; 10)</errorConditionFormula>
        <errorMessage>Phone must be 10 digits</errorMessage>
    </validationRules>
</CustomObject>